fix: Infinite slider works if items overflow
Now slider also works if items overflow the width
of the images container, they don't clutter
anymore when crossing the left border of
the container

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -94,18 +94,29 @@ section#content{
     padding: 20px;
 }
 
-
-.slider > .images{
-    height: 250px;
-    margin-bottom: 20px;
-    
+section#content > .slider >.images{
+    display: flex;
 }
 
-.images > img{
+.slider > h2{
+    font-style: italic;
+}
+
+
+.images > .item{
     width: 20%;
     aspect-ratio: 1/1;
     margin-right: 20px;
     position: relative;
+}
+
+.item{
+    display: flex;
+    flex-direction: column;
+}
+
+.item > img{
+    flex: 1;
 }
 
 
